# fast-api

./: Dockerfile  pyproject.toml
app/: litellm.py
config/: config.yaml  env_settings.py
test/: using_litellm_api_key.py
